# frankos

./: CMakeLists.txt  README.md  release.sh
api/: m-os-api-c-array.h  m-os-api-tasks.h  m-os-api.h
api/mos2/system/: cmd.h
apps/: build_apps.sh
apps/api/: frankos-app.h
apps/compiled/: basic  digger  frankamp  minesweeper  notepad  pshell  solitaire  zxspectrum
apps/source/basic/: CMakeLists.txt
apps/source/calculator/: main.c
apps/source/dendy/: main.c
apps/source/dendy/core_quicknes/: quicknes.cpp
apps/source/digger/: frankos_app.h  frankos_main.c  frankos_vid.c
apps/source/frankamp/: CMakeLists.txt  main.c
apps/source/kickstart/: main.c
apps/source/minesweeper/: CMakeLists.txt  main.c
apps/source/notepad/: CMakeLists.txt  main.c
apps/source/paintbrush/: main.c  pb.h
apps/source/pshell/: CMakeLists.txt  main.c  pshell_compat.h  pshell_vt100.c  pshell_vt100.h  shell.c
apps/source/pshell/cc/: cc.c  cc.h  cc_defs.h  cc_extrns.h  cc_malloc.c
apps/source/solitaire/: main.c
apps/source/videoplayer/: CMakeLists.txt  frankos_stubs.c  main.c  pl_mpeg.h
apps/source/zxspectrum/: main.c  zx.h  zxspectrum.inf
drivers/uart_pio/: CMakeLists.txt
drivers/vga/: CMakeLists.txt  uni_vga_disph.h  vga.c
lib/opl/: CMakeLists.txt  emu8950.c  midi_opl.c  slot_render.cpp
sdcard/: test.c
sdcard/fos/: basic.inf  calculator  calculator.inf  dendy  dendy.inf  digger  digger.elf  frankamp  frankamp.inf  kickstart  manul  minesweeper  minesweeper.inf  nettools  notepad  notepad.inf  paintbrush  pshell  pshell.elf  solitaire  solitaire.inf  video  video.inf  zxspectrum  zxspectrum.elf
src/: FreeRTOSConfig.h  alttab.c  app.c  board_config.h  cmd.c  cmd.h  config.h  control_panel.c  control_panel.h  controls.c  cp_icons.c  cursor.c  desktop.c  desktop.h  dialog.c  dialog.h  display.c  file_dialog.c  file_dialog.h  filemanager.c  filemanager.h  find_dialog.c  gfx.c  main.c  math-wrapper.c  menu.c  menu.h  mos2_stubs.c  net_icons.c  netcard.c  netcard.h  network_settings.c  network_settings.h  run_dialog.c  serial.c  serial.h  settings.c  settings.h  snd.c  snd.h  (+15 more)
src/musl/: __malloc.c  __randname.c
src/posix.1/: exec.c  fcntl.c
src/posix.1/include/sys/: fcntl.h
tools/: convert_video.sh
